fixed z-index

--- a/css/data.css
+++ b/css/data.css
@@ -256,4 +256,6 @@ th {
 
 
 
-
+.tableauPlaceholder {
+  z-index: -9999;
+}
